bk_ida/gobmkida/g1/gtp_tune_move_ordering
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/gtp_tune_move_ordering/src/interface/play_gtp.c:3760:22: error: use of undeclared identifier 'pdfa'
return gtp_success( &pdfa.name[70]); 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/gtp_tune_move_ordering/src/obj/2/play_gtp.o] Error 1
